@@ -16,9 +16,9 @@ limitations under the License.
 
 package org.ardulink.util;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.ardulink.util.Preconditions.checkNotNull;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 
 /**
@@ -36,7 +36,11 @@ public final class URIs {
 	}
 
 	public static String encode(String asciiString) {
-		return URLEncoder.encode(checkNotNull(asciiString, "asciiString must not be null"), UTF_8);
+		try {
+			return URLEncoder.encode(checkNotNull(asciiString, "asciiString must not be null"), "UTF-8");
+		} catch (UnsupportedEncodingException e) {
+			throw Throwables.propagate(e);
+		}
 	}
 
 }
